switched school for linux

--- a/myStartpage/index.html
+++ b/myStartpage/index.html
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			<div class="all">
-				<div class="title linux"><h3>linux</h3></div>
+				<div class="title linux"><h3>school</h3></div>
 				<div class="linksbox">
 					<li><a href="https://wiki.archlinux.org/"><p>wiki</p></a></li>
 					<li><a href="https://aur.archlinux.org/"><p>aur</p></a></li>
