fixed bad colors, added school links

--- a/myStartpage/index.html
+++ b/myStartpage/index.html
@@ -44,11 +44,11 @@
 			<div class="all">
 				<div class="title linux"><h3>school</h3></div>
 				<div class="linksbox">
-					<li><a href="https://wiki.archlinux.org/"><p>wiki</p></a></li>
-					<li><a href="https://aur.archlinux.org/"><p>aur</p></a></li>
-					<li><a href="http://localhost:9091"><p>9091</p></a></li>
-					<li><a href="http://localhost:9117/UI/Dashboard"><p>9117</p></a></li>
-					<li><a href="http://localhost:631/"><p>cups</p></a></li>
+					<li><a href="https://headroyce.myschoolapp.com/app/student#academicclass/88880681/0/bulletinboard"><p>math</p></a></li>
+					<li><a href="https://headroyce.myschoolapp.com/app/student#academicclass/88880599/0/bulletinboard"><p>history</p></a></li>
+					<li><a href="https://headroyce.myschoolapp.com/app/student#academicclass/88880887/0/bulletinboard"><p>spanish</p></a></li>
+					<li><a href="https://headroyce.myschoolapp.com/app/student#academicclass/88880493/0/bulletinboard"><p>english</p></a></li>
+					<li><a href="https://headroyce.myschoolapp.com/app/student#academicclass/88880763/0/bulletinboard"><p>bio</p></a></li>
 				</div>
 			</div>
 			<div class="all">
