added favorite links and mtg links

--- a/myStartpage/index.html
+++ b/myStartpage/index.html
@@ -12,21 +12,21 @@
 		<nav>
 		<ul>
 			<div class="all">
-				<div class="title feed"><h3>feed</h3></div>
+				<div class="title feed"><h3>favorites</h3></div>
 				<div class="linksbox">
-					<li><a href="https://tube.cadence.moe/subscriptions"><p>yt</p></a></li>
-					<li><a href="https://keep.google.com"><p>keep</p></a></li>
-					<li><a href="https://mail.google.com/mail/u/0/#inbox"><p>mail</p></a></li>
-					<li><a href="https://student-web1.dm.unipi.it/squirrelmail/src/login.php"><p>sqm</p></a></li>
+					<li><a href="https://mail.google.com/mail/u/0/#inbox"><p>gmail</p></a></li>
+					<li><a href="https://www.youtube.com"><p>youtube</p></a></li>
+					<li><a href="https://www.twitch.tv"><p>twitch</p></a></li>
+					<li><a href="https://www.reddit.com"><p>reddit</p></a></li>
 				</div>
 			</div>
 			<div class="all">
-				<div class="title reddit"><h3>reddit</h3></div>
+				<div class="title reddit"><h3>mtg</h3></div>
 				<div class="linksbox">
-					<li><a href="https://www.reddit.com/"><p>front</p></a></li>
-					<li><a href="https://www.reddit.com/r/unixporn/"><p>unixporn</p></a></li>
-					<li><a href="https://www.reddit.com/r/startpages/"><p>stpg</p></a></li>
-					<li><a href="https://reddit.com/r/archlinux"><p>arch</p></a></li>
+					<li><a href="https://shop.channelfireball.com"><p>cfb</p></a></li>
+					<li><a href="https://www.mtggoldfish.com"><p>goldfish</p></a></li>
+					<li><a href="https://edhrec.com"><p>edhrec</p></a></li>
+					<li><a href="https://scryfall.com"><p>scryfall</p></a></li>
 				</div>
 			</div>
 			<div class="all">
