--- a/myStartpage/index.html
+++ b/myStartpage/index.html
@@ -30,15 +30,15 @@
 				</div>
 			</div>
 			<div class="all">
-				<div class="title social"><h3>social</h3></div>
+				<div class="title social"><h3>accounts</h3></div>
 				<div class="linksbox">
-					<li><a href="https://mathstodon.xyz/"><p>tuwu</p></a></li>
-					<li><a href="https://hydrogen.element.io"><p>hyd</p></a></li>
-					<li><a href="https://web.whatsapp.com/"><p>uotz</p></a></li>
-					<li><a href="https://iorestoacasa01.cineca.it/pastafresca">pasta</p></a></li>
-					<li><a href="https://discord.com/app"><p>disc</p></a></li>
-					<li><a href="https://lainchan.org/Ω/index.html"><p>/Ω/</p></a></li>
-					<li><a href="https://lainchan.org/music/index.html"><p>/music/</p></a></li>
+					<li><a href="https://app.betterimpact.com/Volunteer/Main"><p>achieve</p></a></li>
+					<li><a href="https://achievetahoe.knack.com/lessons/#instructor-dashboard/"><p>knack</p></a></li>
+					<li><a href="https://lichess.org/"><p>lichess</p></a></li>
+					<li><a href="https://sleeper.app/leagues/606250032022216704">sleeper</p></a></li>
+					<li><a href="https://app.scoir.com/student/dashboard"><p>scoir</p></a></li>
+					<li><a href="https://drive.google.com/drive/u/1/my-drive"><p>drive</p></a></li>
+					<li><a href="https://docs.google.com/document/u/1/?tgif=d"><p>docs</p></a></li>
 				</div>
 			</div>
 			<div class="all">
