added zoom links

--- a/myStartpage/index.html
+++ b/myStartpage/index.html
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			<div class="all">
-				<div class="title linux"><h3>school</h3></div>
+				<div class="title linux"><h3>lms</h3></div>
 				<div class="linksbox">
 					<li><a href="https://headroyce.myschoolapp.com/app/student#academicclass/88880681/0/bulletinboard"><p>math</p></a></li>
 					<li><a href="https://headroyce.myschoolapp.com/app/student#academicclass/88880599/0/bulletinboard"><p>history</p></a></li>
@@ -52,18 +52,14 @@
 				</div>
 			</div>
 			<div class="all">
-				<div class="title math"><h3>math</h3></div>
+				<div class="title math"><h3>zoom</h3></div>
 				<div class="linksbox">
-					<li><a href="http://www.dm.unipi.it/webnew/it/cds/home-cds"><p>dip</p></a></li>
-					<li><a href="https://drive.google.com/drive/u/2/folders/10rKX30UqeyPb5pnWOpNdAfgzVBurDJve">rec</p></a></li>
-					<li><a href="https://drive.google.com/drive/folders/1vlbpVPOzmh5gO7906Y0xref-VB7st3Yv">drive</p></a></li>
-					<li><a href="https://elearning.dm.unipi.it/course/view.php?id=197"><p>A2</p></a></li>
-					<li><a href="https://elearning.dm.unipi.it/course/view.php?id=193"><p>G2</p></a></li>
-					<li><a href="http://didawiki.cli.di.unipi.it/doku.php/matematica/asd/asd_20/start"><p>algDatSt</p></a></li>
-					<li><a href="https://elearning.dm.unipi.it/course/view.php?id=233"><p>EPS</p></a></li>
-					<li><a href="https://elearning.dm.unipi.it/course/view.php?id=202"><p>anaNum</p></a></li>
-					<li><a href="https://elearning.dm.unipi.it/course/view.php?id=236"><p>labDidComp</p></a></li>
-					<li><a href="https://elearning.dm.unipi.it/course/view.php?id=190"><p>alg1</p></a></li>
+					<li><a href="https://us02web.zoom.us/j/86156884348?pwd=aHMrckFUY0V6dE10OXIvVUxNbytOdz09#success"><p>math</p></a></li>
+					<li><a href="https://us02web.zoom.us/j/89147274052?pwd=Z2lySi9LVVlhYWE5RE9WRHcvMjhldz09#success">history</p></a></li>
+					<li><a href="https://us02web.zoom.us/j/2699179363#success">spanish</p></a></li>
+					<li><a href="https://us02web.zoom.us/j/6157735386#success"><p>english</p></a></li>
+					<li><a href="https://us02web.zoom.us/j/8100349571?pwd=SmlLRnUxYWZabjlFYnpBcUtHcUVhQT09#success"><p>bio</p></a></li>
+					<li><a href="https://headroyce-org.zoom.us/j/83636858091?pwd=WUg4VEc4SHBMc3dKOFJEYUdtTFhFdz09#success"><p>advising</p></a></li>
 				</div>
 			</div>
 			<div class="all">
